--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             text: 'Main Button'
         });
         Telegram.WebApp.MainButton.onClick(function () {
-            Telegram.WebApp.showAlert('Main Button was clicked')
+            Telegram.WebApp.showAlert('Здарова за*бал')
         });	
         Telegram.WebApp.MainButton.show();
 
